--- a/G-Shot/he.lproj/Localizable.strings
+++ b/G-Shot/he.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 
 username = "מספר גלריה";
+cardNumber = "מספר כרטיס";
 password = "מספר אבטחה";
 error = "רישום לא הצליח";
 picture_title = "GreenShot-Image";
