--- a/G-Shot/en.lproj/Localizable.strings
+++ b/G-Shot/en.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 
 username = "User Name";
+cardNumber = "Card number";
 password = "Password";
 error = "Registration failed";
 picture_title = "GreenShot-Image";
